--- a/fan_page/src/App.css
+++ b/fan_page/src/App.css
@@ -1,5 +1,10 @@
+*{
+  padding:0px;
+  margin: 0px;
+}
+
 body{
-  padding: 50px;
+  padding: 0px;
   margin: 0;
   background-image: url(../src/img/1.jpeg);
 }
@@ -10,6 +15,10 @@ body{
 h1{
   text-align: left;
   color: aliceblue;
+
+}
+.logout-btn{
+  margin-left: 150px;
 }
 p{
   text-align: left;
@@ -17,9 +26,13 @@ p{
   color: #38b000;
   font-family: rickymorty;
   font-size: 60px;
+  margin-left: 150px;
 }
 
-
+.usser-image{
+  margin-top: 150px;
+  margin-left: 250px;
+}
 .nav-container{
   background-color: #d9fcce;
   width: 3rem;
