Revert "Merge branch 'main' of https://github.com/ItchelZuniga/API-Rick-y-Morty"
This reverts commit a13a344cf506464c5a08ec6a8bfadaa9cad02c57, reversing
changes made to 76707e94b3925c04b797ebf858f8096391847b04.

--- a/fan_page/src/App.css
+++ b/fan_page/src/App.css
@@ -1,4 +1,4 @@
-body{
+.background{
   padding: 50px;
   margin: 0;
   background-image: url(../src/img/1.jpeg);
@@ -10,11 +10,6 @@ body{
 h1{
   text-align: left;
   color: aliceblue;
-
-}
-.logout-btn{
-  margin-left: 150px;
-   width: 90px;
 }
 p{
   text-align: left;
@@ -22,13 +17,9 @@ p{
   color: #38b000;
   font-family: rickymorty;
   font-size: 60px;
-  margin-left: 150px;
 }
 
-.usser-image{
-  margin-top: 150px;
-  margin-left: 250px;
-}
+
 .nav-container{
   background-color: #d9fcce;
   width: 3rem;
