--- a/fan_page/src/App.css
+++ b/fan_page/src/App.css
@@ -26,20 +26,32 @@ body{
   text-shadow: 2px 2px  aliceblue ;
 }
 .usser-image{
-  margin-left: 300px;
-  margin-top: 100px;
+  position: absolute;
+  right: 30px;
+  margin-top: 30px;
+  vertical-align: end;
+  width: 80px;
+  border-radius: 53px;
+  
 }
 .usser-name{
   text-align: left;
-  margin-left: 250px;
+  padding: 60px 125px 20px ;
+  text-align: right;
   color: aliceblue;
+
+}
+.perfil{
+  padding-top: 20px;
+  padding-left: 250px;
+  color: white;
 }
 .usser-email{
   text-align: left;
   text-shadow: 2px 2px  aliceblue ;
   color: #38b000;
   font-family: rickymorty;
-  font-size: 60px;
+  font-size: 55px;
   margin-left: 250px;
 }
 
@@ -47,9 +59,13 @@ body{
   margin: 50px;
 }
 .btn-logout{
-  margin-left: 250px;
-  text-align: right;
-  margin-top: 0px;
+  text-align: center;
+  position: absolute;
+  right: 30px;
+  top: 150px;
+  width: 100px;
+  height: 30px;
+  font-size: 14px;
 }
 
 .nav-container{
